--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -49,7 +49,8 @@
                         android:id="@+id/button6"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text=" Mis boletos"
+                        android:onClick="mediosDePagos"
+                        android:text="Pagos"
                         app:cornerRadius="25dp" />
                 </TableRow>
 
@@ -72,7 +73,7 @@
                         android:id="@+id/button7"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Descuentos"
+                        android:text="sugerencias"
                         app:cornerRadius="25dp" />
                 </TableRow>
 
