--- a/app/src/main/res/layout/activity_medios.xml
+++ b/app/src/main/res/layout/activity_medios.xml
@@ -11,9 +11,9 @@
         android:id="@+id/cardView5"
         android:layout_width="276dp"
         android:layout_height="111dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/cardView4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.511"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -29,9 +29,11 @@
         android:id="@+id/cardView4"
         android:layout_width="287dp"
         android:layout_height="150dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         app:cardBackgroundColor="#F7A9D6CA"
         app:cardCornerRadius="25dp"
+        app:layout_constraintBottom_toTopOf="@+id/cardView12"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView5">
@@ -71,8 +73,10 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView12"
         android:layout_width="289dp"
         android:layout_height="60dp"
+        android:layout_marginTop="8dp"
         app:cardBackgroundColor="#F7A9D6CA"
         app:layout_constraintBottom_toTopOf="@+id/cardView11"
         app:layout_constraintEnd_toEndOf="parent"
@@ -92,12 +96,14 @@
         android:id="@+id/cardView11"
         android:layout_width="261dp"
         android:layout_height="82dp"
-        android:layout_marginBottom="108dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="24dp"
         app:cardBackgroundColor="#F7A9D6CA"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView12">
 
         <TextView
             android:id="@+id/txtResult4"
