Proyecto terminado CineFlix en su esplendor

--- a/app/src/main/res/layout/activity_cartelera.xml
+++ b/app/src/main/res/layout/activity_cartelera.xml
@@ -12,6 +12,7 @@
         android:layout_width="238dp"
         android:layout_height="200dp"
         android:layout_marginBottom="8dp"
+        app:cardBackgroundColor="#F7A9D6CA"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
@@ -62,6 +63,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
+        app:cardBackgroundColor="#F7A9D6CA"
         app:layout_constraintBottom_toTopOf="@+id/cardView7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -79,6 +81,7 @@
         android:layout_width="268dp"
         android:layout_height="74dp"
         android:layout_marginTop="16dp"
+        app:cardBackgroundColor="#F7A9D6CA"
         app:layout_constraintBottom_toTopOf="@+id/cardView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -122,6 +125,7 @@
         android:layout_width="213dp"
         android:layout_height="205dp"
         android:layout_marginBottom="8dp"
+        app:cardBackgroundColor="#F7A9D6CA"
         app:layout_constraintBottom_toTopOf="@+id/cardView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
