--- a/app/src/main/res/layout/activity_clases.xml
+++ b/app/src/main/res/layout/activity_clases.xml
@@ -9,13 +9,14 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView9"
-        android:layout_width="316dp"
-        android:layout_height="198dp"
+        android:layout_width="292dp"
+        android:layout_height="133dp"
+        app:cardBackgroundColor="#F7A9D6CA"
         app:cardCornerRadius="25dp"
         app:layout_constraintBottom_toTopOf="@+id/cardView8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -49,8 +50,9 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView8"
-        android:layout_width="344dp"
-        android:layout_height="395dp"
+        android:layout_width="301dp"
+        android:layout_height="377dp"
+        app:cardBackgroundColor="#F7A9D6CA"
         app:cardCornerRadius="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -102,8 +104,8 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="304dp"
-                android:layout_height="198dp"
+                android:layout_width="238dp"
+                android:layout_height="199dp"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
