Proyecto terminado CineFlix en su esplendor

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,6 +74,7 @@
                     android:id="@+id/button5"
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
+                    android:onClick="Salir"
                     android:text="@string/salir"
                     app:cornerRadius="20dp" />
 
